MFC r253858:

Micro-optimization suggested in
https://bugzilla.mozilla.org/show_bug.cgi?id=898234
by pchang9. While there simplify the code.

Former-commit-id: 2439bb93a4373985b2239860fa9edae40b29a3d5